fixing issues with formatting for type, component field of sensorReport.