@@ -19,7 +19,6 @@ import static java.util.Map.entry;
 
 import java.time.format.DateTimeFormatter;
 import java.time.format.DateTimeFormatterBuilder;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import lombok.AccessLevel;
@@ -36,9 +35,9 @@ public class ConstantEventHashInfo {
   // Constant information required for reading, sorting, modification and conversion of the JSON/XML
   // EPCIS event field information.
   protected static final List<String> EPC_LISTS =
-      Arrays.asList("epcList", "inputEPCList", "childEPCs", "outputEPCList");
+      List.of("epcList", "inputEPCList", "childEPCs", "outputEPCList");
   protected static final List<String> EVENT_TIME =
-      Arrays.asList("eventTime", "declarationTime", "time", "startTime", "endTime");
+      List.of("eventTime", "declarationTime", "time", "startTime", "endTime");
   protected static final String CORRECTIVE_LIST = "correctiveEventIDs";
   protected static final String QUANTITY_ELEMENT = "quantityElement";
   protected static final String SENSOR_ELEMENT = "sensorElement";
@@ -46,7 +45,7 @@ public class ConstantEventHashInfo {
   protected static final String PERSISTENT_DISPOSITION = "persistentDisposition";
   protected static final String SENSOR_ELEMENT_LIST = "sensorElementList";
   protected static final String CONTEXT = "@context";
-  protected static final List<String> DUPLICATE_ENTRY_CHECK = Arrays.asList("set", "unset");
+  protected static final List<String> DUPLICATE_ENTRY_CHECK = List.of("set", "unset");
   protected static final Map<String, String> LIST_OF_OBJECTS =
       Map.ofEntries(
           entry("quantityList", QUANTITY_ELEMENT),
@@ -57,11 +56,11 @@ public class ConstantEventHashInfo {
           entry(SENSOR_REPORT, SENSOR_REPORT));
   protected static final String INSTANCE_IDENTIFIER_URN_FORMAT = "urn:epc:id:";
   protected static final List<String> CLASS_IDENTIFIER_URN_FORMAT =
-      Arrays.asList("urn:epc:class:", "urn:epc:idpat:");
+      List.of("urn:epc:class:", "urn:epc:idpat:");
   protected static final List<String> SOURCE_DESTINATION_URN_FORMAT =
-      Arrays.asList("urn:epc:id:pgln:", "urn:epc:id:sgln:");
+      List.of("urn:epc:id:pgln:", "urn:epc:id:sgln:");
   protected static final List<String> CBV_STRING_TYPE =
-      Arrays.asList(
+      List.of(
           "urn:epcglobal:cbv:bizstep:",
           "urn:epcglobal:cbv:disp:",
           "urn:epcglobal:cbv:btt:",
@@ -69,35 +68,34 @@ public class ConstantEventHashInfo {
           "urn:epcglobal:cbv:er:");
   protected static final MultiValuedMap<String, String> BARE_STRING_FIELD_PARENT_CHILD =
       new ArrayListValuedHashMap<>();
-  protected static final List<String> IGNORE_FIELDS =
-      Arrays.asList("recordTime", "eventID", CONTEXT);
+  protected static final List<String> IGNORE_FIELDS = List.of("recordTime", "eventID", CONTEXT);
   protected static final DateTimeFormatter DATE_FORMATTER =
       new DateTimeFormatterBuilder().appendInstant(3).toFormatter();
 
   // Variables to read XML and store the relevant information within the Context Node.
   protected static final List<String> EPCIS_EVENT_TYPES =
-      Arrays.asList(
+      List.of(
           "ObjectEvent",
           "AggregationEvent",
           "TransactionEvent",
           "TransformationEvent",
           "AssociationEvent");
   protected static final List<String> XML_IGNORE_FIELDS =
-      Arrays.asList("epcis:EPCISDocument", "EPCISBody", "EventList");
+      List.of("epcis:EPCISDocument", "EPCISBody", "EventList");
   protected static final List<String> WHAT_DIMENSION_XML_PATH =
-      Arrays.asList("epc/epcList/", "epc/childEPCs/", "epc/inputEPCList/", "epc/outputEPCList");
+      List.of("epc/epcList/", "epc/childEPCs/", "epc/inputEPCList/", "epc/outputEPCList");
   protected static final List<String> WHY_DIMENSION_XML_PATH =
-      Arrays.asList(
+      List.of(
           "bizTransaction/bizTransactionList", "source/sourceList", "destination/destinationList");
   protected static final List<String> HOW_DIMENSION_XML_PATH =
-      Arrays.asList(
+      List.of(
           "sensorMetadata/sensorElement/sensorElementList",
           "sensorReport/sensorElement/sensorElementList");
   protected static final List<String> USER_EXTENSION_WRAPPER =
-      Arrays.asList(SENSOR_ELEMENT_LIST, SENSOR_ELEMENT);
+      List.of(SENSOR_ELEMENT_LIST, SENSOR_ELEMENT);
 
   protected static final List<String> EXCLUDE_LINE_BREAK =
-      Arrays.asList(
+      List.of(
           "epcList",
           "childEPCs",
           "inputEPCList",
@@ -119,7 +117,20 @@ public class ConstantEventHashInfo {
           SENSOR_REPORT,
           "type",
           PERSISTENT_DISPOSITION,
-          "bizTransaction");
+          "bizTransaction",
+          "ilmd");
+
+  protected static final List<String> SHORTNAME_FIELDS =
+      List.of(
+          "deviceID",
+          "deviceMetadata",
+          "rawData",
+          "dataProcessingMethod",
+          "bizRules",
+          "microorganism",
+          "chemicalSubstance",
+          "coordinateReferenceSystem",
+          "uriValue");
 
   static {
     BARE_STRING_FIELD_PARENT_CHILD.put("bizStep", "bizStep");
